--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "cogo-toast": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2"
   },
