--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.5",
     "cogo-toast": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
